OPTION(OpenMVG_BUILD_TX_MINIMUM "Build OpenMVG with tx in minimum" ON)
MESSAGE("** OpenMVG_BUILD_TX_MINIMUM: " ${OpenMVG_BUILD_TX_MINIMUM})
ADD_SUBDIRECTORY(SfM)
if (NOT OpenMVG_BUILD_TX_MINIMUM)
  ADD_SUBDIRECTORY(Localization)
  #ADD_SUBDIRECTORY(opencv)

  IF (OpenMVG_BUILD_OPENGL_EXAMPLES)
    ADD_SUBDIRECTORY(SfMViewer)
  ENDIF (OpenMVG_BUILD_OPENGL_EXAMPLES)

  ADD_SUBDIRECTORY(colorHarmonize)

  find_host_package(Qt4 QUIET)
  if (QT_FOUND)
  ADD_SUBDIRECTORY(ui)
  endif (QT_FOUND)
endif(NOT OpenMVG_BUILD_TX_MINIMUM)

